--- a/Deployment.yml
+++ b/Deployment.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: kubemubin/devops-project-one
+        image: stevl135/estebanjenkins:latest
         ports:
         - containerPort: 80
